--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"  # optional since v1.27.0
 services:
 
   api:
-    container_name: nest-test
+    container_name: nest-tallos-api
     build: .
     ports:
       - "3000:3000"
