--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.0.0",
@@ -34,6 +34,8 @@
     "@types/passport-jwt": "^3.0.6",
     "base64-url": "^2.3.3",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "mongoose": "^6.1.7",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
