--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.2.6",
     "@nestjs/swagger": "^5.2.0",
+    "@nestjs/websockets": "^8.2.6",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
     "base64-url": "^2.3.3",
@@ -52,6 +54,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
